send mail with exchange topic

--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "start:sendQueue1": "nodemon producer.js hello1",
     "start:sendQueue2": "nodemon producer.js hello2",
     "start:sendQueue3": "nodemon producer.js hello3",
-    "start:postVideo": "nodemon postVideo.js",
+    "start:postVideo": "nodemon postVideo.js series rabbitmq",
+    "start:sendMail": "node send.mail.js 'dev.test.lead' 'hello dev and test lead' ",
+    "start:sendMail2": "node send.mail.js 'dev111.test' 'hello dev and test' ",
     "start:receiveQueue": "nodemon consumer.js",
     "start:receiveQueue1": "nodemon consumer.js",
     "start:receiveQueue2": "nodemon consumer.js",
     "start:receiveNoti": "nodemon receiveVideoNoti.js",
     "start:receiveNoti1": "nodemon receiveVideoNoti.js",
+    "start:receiveMail": "node receive.mail.js '*.test' ",
+    "start:receiveMail2": "node receive.mail.js 'dev.test.lead' ",
+    "start:receiveMail3": "node receive.mail.js '#.lead' ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
